--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "mtgsdk": "^0.4.3",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-burger-menu": "^2.6.13",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.4.1",
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
